// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test \`ArgumentNullError\` own keys 1`] = `
Array [
  "stack",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 2`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 3`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 4`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 5`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 6`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 7`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` own keys 8`] = `
Array [
  "stack",
  "message",
  "_paramName",
]
`;

exports[`Test \`ArgumentNullError\` property: message 1`] = `"error"`;

exports[`Test \`ArgumentNullError\` property: message 2`] = `"error"`;

exports[`Test \`ArgumentNullError\` property: message 3`] = `"error (Parameter 'key_parameter')"`;

exports[`Test \`ArgumentNullError\` property: message 4`] = `"error"`;

exports[`Test \`ArgumentNullError\` property: message 5`] = `"error (Parameter 'key_parameter')"`;

exports[`Test \`ArgumentNullError\` property: message 6`] = `"error"`;

exports[`Test \`ArgumentNullError\` property: message 7`] = `"error"`;
